grammar.js
    source_file: $ => seq(
      optional($.shebang),
      optional($.file_header),
      optional($.arg_block),
      repeat($.cmd_block),
      repeat($._stmt),
    ),

    _stmt: $ => choice(
      $._simple_stmts,
      $._complex_stmt,
    ),

    // Simple stmts

    expr_stmt: $ => prec.right(seq(
      field("expr", $.expr),
      optional(field("catch", $.catch_block)),
    )),

    expr: $ => field("delegate", $.ternary_expr),

    ternary_expr: $ => choice(
      // Ternary operator (lowest precedence; right associative)
      prec.right(PREC.ternary, seq(
        field('condition', $.or_expr),
        '?',
        field('true_branch', $.expr),
        ':',
        field('false_branch', $.ternary_expr)
      )),
      field("delegate", $.or_expr),
    ),

    or_expr: $ => choice(
      prec.left(PREC.or, seq(
        field('left', $.or_expr),
        field('op', 'or'),
        field('right', $.and_expr)
      )),
      field("delegate", $.and_expr),
    ),

    and_expr: $ => choice(
      prec.left(PREC.and, seq(
        field('left', $.and_expr),
        field('op', 'and'),
        field('right', $.compare_expr)
      )),
      field("delegate", $.compare_expr),
    ),

    compare_expr: $ => choice(
      prec.left(PREC.compare, seq(
        field('left', $.compare_expr),
        field('op', choice('<', '<=', '==', '!=', '>=', '>', 'in', $.not_in)),
        field('right', $.add_expr)
      )),
      field("delegate", $.add_expr),
    ),

    add_expr: $ => choice(
      prec.left(PREC.plus, seq(
        field('left', $.add_expr),
        field('op', $._unary_op_sign),
        field('right', $.mult_expr)
      )),
      field("delegate", $.mult_expr),
    ),

    mult_expr: $ => choice(
      prec.left(PREC.times, seq(
        field('left', $.mult_expr),
        field('op', choice('*', '/', '%')),
        field('right', $.unary_expr)
      )),
      field("delegate", $.unary_expr),
    ),

    unary_expr: $ => choice(
      prec(PREC.unary, seq(
        field('op', choice($._unary_op_sign, 'not')),
        field('arg', $.unary_expr)
      )),
      field("delegate", choice(
        $.fallback_expr,
        $.fn_lambda,
      )),
    ),

    indexed_expr: $ => prec.left(PREC.call, seq(
      field("root", $.primary_expr),
      repeat($._indexing)
    )),

    primary_expr: $ => choice(
      $.literal,
      $.list_comprehension,
      $.parenthesized_expr,
      $.call,
    ),

    call: $ => prec.right(PREC.call, seq(
      field("func", $._identifier),
      $._call_arg_list),
    ),

    _call_arg_list: $ => choice(
      seq("(", ")"), // empty call
      seq("(", sepTrail1(field("arg", $.expr)), ")"), // no named args
      seq("(", optional(seq(commaSep1(field("arg", $.expr)), ",")), sepTrail1(field("named_arg", $.call_named_arg)), ")"), // mixed // todo can probably collapse with previous
    ),

    call_named_arg: $ => seq(
      field('name', $._identifier),
      '=',
      field('value', $.expr),
    ),

    _unary_op_sign: $ => choice('+', '-'),

    // Assignment

    assign: $ => prec.right(seq(
      $._left_side,
      '=',
      $._right_side,
      optional(field("catch", $.catch_block)),
    )),

    // Typed local declaration: `x: int = 5`.
    //
    // typed_assign covers ALL identifiers that aren't rad-block
    // keywords. The rad/request/display cases are handled inside
    // the merged `rad_block` rule's choice (see Rad Block section
    // below) so `rad: int = 5` parses as a typed-assign branch of
    // rad_block while `rad :\n indent ...` parses as the block
    // branch - both share the same LR state, lookahead picks the
    // right one. No GLR forking or dynamic precedence needed.
    _left_side: $ => choice(
      commaSep1(field("lefts", $.var_path)),
      seq('[', sepTrail1(field("lefts", $.var_path)), ']'),
      $._left_side_single,
    ),


    _right_side: $ => prec(-1, choice(
      commaSep1($._right_side_single),
      $._right_side_single,
      field("right", $.switch_stmt),
    )),

    // todo rename to identifier_path?
    var_path: $ => prec.left(PREC.var_path, seq(
      field("root", $._identifier),
      repeat($._indexing),
    )),

    // expected to look like var_path
    _indexing: $ => prec(PREC.indexing, choice(
      seq(
        '[',
        field('indexing', choice(
          $.expr,
          $.slice,
        )),
        ']'
      ),
      seq('.', field("indexing", choice($._identifier, $.call))),
    )),

    del_stmt: $ => prec.right(seq(
      "del",
      sepTrail1(field("right", $.var_path)),
    )),

    break_stmt: _ => 'break',
    continue_stmt: _ => 'continue',

    if_stmt: $ => seq(
      field("alt", $.if_alt),
      repeat(seq("else", field("alt", $.if_alt))),
      optional(seq("else", field("alt", $.else_alt))),
    ),

    _if_clause: $ => seq("if", field('condition', $.expr)),

    for_loop: $ => seq(
      $._for_in,
      colonBlockField($, $._stmt, "stmt"),
    ),

    _for_in: $ => seq(
      'for',
      field("lefts", $.for_lefts),
      'in',
      field('right', $.expr),
      optional(seq('with', field('context', $._identifier))),
    ),

    list_comprehension: $ => seq(
      '[',
      field('expr', $.expr),
      $._for_in,
      optional($._if_clause),
      ']',
    ),

    list: $ => choice(
      $.empty_list,
      seq("[", sepTrail0(field("list_entry", $.expr)), "]",),
    ),

    map: $ => seq("{", sepTrail0(field("map_entry", $.map_entry)), "}"),
    map_entry: $ => seq(
      field('key', $.expr),
      ":",
      field('value', $.expr),
    ),

    string: $ => seq(
      field("start", $.string_start),
      optional(field("contents", $.string_contents)),
      field("end", $.string_end),
    ),

    interpolation: $ => seq(
      '{',
      field('expr', $.expr),
      optional(field('format', $.format_specifier)),
      '}',
    ),
    _identifier: $ => prec(1, choice( // prec to avoid conflict with aliases
      // if identifier is missing, *identifierRegex* will be the node marked as missing.
      // by aliasing it here, we prevent downstream from needing to worry about identifierRegex,
      // but still let them see when the identifier is missing.
      alias($.identifierRegex, "identifier"),
      // need the following aliases, otherwise tree sitter eagerly parses them out
      // as keywords, causing ERROR nodes in the tree
      alias("confirm", "identifier"),
      alias("unsafe", "identifier"),
      alias("quiet", "identifier"),
      // rad block keyword - allow use as identifier when not starting a block
      // (e.g., `rad = foo` should work as an assignment)
      alias("rad", "identifier"),
      alias("request", "identifier"),
      alias("display", "identifier"),
      // for-loop context keyword - allow use as identifier outside for-loop context
      alias("with", "identifier"),
    )),

    int: _ => /\d(_*\d+)*/,
    bool: _ => choice("true", "false"),
    literal: $ => choice(
      $.string,
      $.float,
      $.int,
      $.scientific_number,
      $.bool,
      $.list,
      $.map,
      $.null,
    ),
  },
});

module.exports.PREC = PREC;

/**
 * Creates a rule to match zero or more of the rules separated by a comma
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {ChoiceRule}
 */
function commaSep0(rule) {
  return sep0(rule, ',');
}

/**
 * Creates a rule to match zero or more occurrences of `rule` separated by `sep`, no trail.
 *
 * @param {RuleOrLiteral} rule
 *
 * @param {RuleOrLiteral} separator
 *
 * @returns {ChoiceRule}
 */
function sep0(rule, separator) {
  return optional(sep1(rule, separator));
}

/**
 * Creates a rule to match one or more of the rules separated by a comma
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function commaSep1(rule) {
  return sep1(rule, ',');
}

/**
 * Creates a rule to match one or more occurrences of `rule` separated by `sep`, no trail.
 *
 * @param {RuleOrLiteral} rule
 *
 * @param {RuleOrLiteral} separator
 *
 * @returns {SeqRule}
 */
function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}

/**
 * Creates a rule to match zero or more occurrences of a rule, allowing for trailing commas.
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {ChoiceRule}
 */
function sepTrail0(rule) {
  return optional(sepTrail1(rule));
}

/**
 * Creates a rule to match one or more occurrences of a rule, allowing for trailing commas.
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function sepTrail1(rule) {
  return seq(rule, repeat(seq(',', rule)), optional(','));
}

/**
 * Creates a rule to match repeated occurrences of a rule as a body, starting with a colon,
 * handling indents.
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function colonBlock($, rule) {
  return seq(
    ":",
    $._newline,
    $._indent,
    repeat(rule),
    $._dedent
  );
}

/**
 * Creates a rule to match repeated occurrences of a rule as a body, starting with a colon,
 * handling indents.
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function colonBlockField($, rule, fieldName, colonToken) {
  // Most callers want the in-grammar ':' literal. rad_block passes
  // the external _block_colon token so its colon is distinguishable
  // from a typed-assign ':' (which can also follow a var_path-like
  // prefix when the variable name happens to be 'rad', 'request',
  // or 'display'). Defaulting keeps every other call site
  // unchanged.
  return seq(
    colonToken || ":",
    $._newline,
    $._indent,
    field(fieldName, repeat(rule)),
    $._dedent
  );
}
