test/corpus/for_loop.txt
===
Just i
===

for i in nums:
    a = 2
    b = 2

---

(source_file
  (for_loop
    left: (identifier)
    right: (expr
      (primary_expr
        (var_path
          root: (identifier))))
    (assign
      left: (var_path
        root: (identifier))
      right: (expr
        (primary_expr
          (literal
            (int)))))
    (assign
      left: (var_path
        root: (identifier))
      right: (expr
        (primary_expr
          (literal
            (int)))))))

===
i, item
===

for i, item in nums:
    a = 2
    b = 2

---

(source_file
  (for_loop
    left: (identifier)
    left: (identifier)
    right: (expr
      (primary_expr
        (var_path
          root: (identifier))))
    (assign
      left: (var_path
        root: (identifier))
      right: (expr
        (primary_expr
          (literal
            (int)))))
    (assign
      left: (var_path
        root: (identifier))
      right: (expr
        (primary_expr
          (literal
            (int)))))))

===
break, continue
===

for i in nums:
  a = 2
  break

for i in nums:
  a = 2
  continue

---

(source_file
  (for_loop
    left: (identifier)
    right: (expr
      (primary_expr
        (var_path
          root: (identifier))))
    (assign
      left: (var_path
        root: (identifier))
      right: (expr
        (primary_expr
          (literal
            (int)))))
    (break_stmt))
  (for_loop
    left: (identifier)
    right: (expr
      (primary_expr
        (var_path
          root: (identifier))))
    (assign
      left: (var_path
        root: (identifier))
      right: (expr
        (primary_expr
          (literal
            (int)))))
    (continue_stmt)))
