test/corpus/functions.txt
===
Empty
===

print()

---

(source_file
  (expr
    delegate: (ternary_expr
      delegate: (or_expr
        delegate: (and_expr
          delegate: (compare_expr
            delegate: (add_expr
              delegate: (mult_expr
                delegate: (unary_expr
                  delegate: (indexed_expr
                    root: (primary_expr
                      (call))))))))))))

===
Basic 1
===

print(hi)

---

(source_file
  (expr
    delegate: (ternary_expr
      delegate: (or_expr
        delegate: (and_expr
          delegate: (compare_expr
            delegate: (add_expr
              delegate: (mult_expr
                delegate: (unary_expr
                  delegate: (indexed_expr
                    root: (primary_expr
                      (call
                        arg: (expr
                          delegate: (ternary_expr
                            delegate: (or_expr
                              delegate: (and_expr
                                delegate: (compare_expr
                                  delegate: (add_expr
                                    delegate: (mult_expr
                                      delegate: (unary_expr
                                        delegate: (var_path)))))))))))))))))))))

===
Basic 2+
===

print(hi, hello, hey)

---

(source_file
  (expr
    delegate: (ternary_expr
      delegate: (or_expr
        delegate: (and_expr
          delegate: (compare_expr
            delegate: (add_expr
              delegate: (mult_expr
                delegate: (unary_expr
                  delegate: (indexed_expr
                    root: (primary_expr
                      (call
                        arg: (expr
                          delegate: (ternary_expr
                            delegate: (or_expr
                              delegate: (and_expr
                                delegate: (compare_expr
                                  delegate: (add_expr
                                    delegate: (mult_expr
                                      delegate: (unary_expr
                                        delegate: (var_path)))))))))
                        arg: (expr
                          delegate: (ternary_expr
                            delegate: (or_expr
                              delegate: (and_expr
                                delegate: (compare_expr
                                  delegate: (add_expr
                                    delegate: (mult_expr
                                      delegate: (unary_expr
                                        delegate: (var_path)))))))))
                        arg: (expr
                          delegate: (ternary_expr
                            delegate: (or_expr
                              delegate: (and_expr
                                delegate: (compare_expr
                                  delegate: (add_expr
                                    delegate: (mult_expr
                                      delegate: (unary_expr
                                        delegate: (var_path)))))))))))))))))))))

===
Basic 2+ trailing
===

print(hi, hello, hey, )

---

(source_file
  (expr
    delegate: (ternary_expr
      delegate: (or_expr
        delegate: (and_expr
          delegate: (compare_expr
            delegate: (add_expr
              delegate: (mult_expr
                delegate: (unary_expr
                  delegate: (indexed_expr
                    root: (primary_expr
                      (call
                        arg: (expr
                          delegate: (ternary_expr
                            delegate: (or_expr
                              delegate: (and_expr
                                delegate: (compare_expr
                                  delegate: (add_expr
                                    delegate: (mult_expr
                                      delegate: (unary_expr
                                        delegate: (var_path)))))))))
                        arg: (expr
                          delegate: (ternary_expr
                            delegate: (or_expr
                              delegate: (and_expr
                                delegate: (compare_expr
                                  delegate: (add_expr
                                    delegate: (mult_expr
                                      delegate: (unary_expr
                                        delegate: (var_path)))))))))
                        arg: (expr
                          delegate: (ternary_expr
                            delegate: (or_expr
                              delegate: (and_expr
                                delegate: (compare_expr
                                  delegate: (add_expr
                                    delegate: (mult_expr
                                      delegate: (unary_expr
                                        delegate: (var_path)))))))))))))))))))))

===
Basic 2+ trailing multiline
===

print(
    hi,
    hello,
    hey,
)

---

(source_file
  (expr
    delegate: (ternary_expr
      delegate: (or_expr
        delegate: (and_expr
          delegate: (compare_expr
            delegate: (add_expr
              delegate: (mult_expr
                delegate: (unary_expr
                  delegate: (indexed_expr
                    root: (primary_expr
                      (call
                        arg: (expr
                          delegate: (ternary_expr
                            delegate: (or_expr
                              delegate: (and_expr
                                delegate: (compare_expr
                                  delegate: (add_expr
                                    delegate: (mult_expr
                                      delegate: (unary_expr
                                        delegate: (var_path)))))))))
                        arg: (expr
                          delegate: (ternary_expr
                            delegate: (or_expr
                              delegate: (and_expr
                                delegate: (compare_expr
                                  delegate: (add_expr
                                    delegate: (mult_expr
                                      delegate: (unary_expr
                                        delegate: (var_path)))))))))
                        arg: (expr
                          delegate: (ternary_expr
                            delegate: (or_expr
                              delegate: (and_expr
                                delegate: (compare_expr
                                  delegate: (add_expr
                                    delegate: (mult_expr
                                      delegate: (unary_expr
                                        delegate: (var_path)))))))))))))))))))))

===
Only named 1
===

print(foo=bar)

---

(source_file
  (expr
    delegate: (ternary_expr
      delegate: (or_expr
        delegate: (and_expr
          delegate: (compare_expr
            delegate: (add_expr
              delegate: (mult_expr
                delegate: (unary_expr
                  delegate: (indexed_expr
                    root: (primary_expr
                      (call
                        named_arg: (call_named_arg
                          value: (expr
                            delegate: (ternary_expr
                              delegate: (or_expr
                                delegate: (and_expr
                                  delegate: (compare_expr
                                    delegate: (add_expr
                                      delegate: (mult_expr
                                        delegate: (unary_expr
                                          delegate: (var_path))))))))))))))))))))))

===
Only named 2+
===

print(foo=bar, a = b, c = d, )

---

(source_file
  (expr
    delegate: (ternary_expr
      delegate: (or_expr
        delegate: (and_expr
          delegate: (compare_expr
            delegate: (add_expr
              delegate: (mult_expr
                delegate: (unary_expr
                  delegate: (indexed_expr
                    root: (primary_expr
                      (call
                        named_arg: (call_named_arg
                          value: (expr
                            delegate: (ternary_expr
                              delegate: (or_expr
                                delegate: (and_expr
                                  delegate: (compare_expr
                                    delegate: (add_expr
                                      delegate: (mult_expr
                                        delegate: (unary_expr
                                          delegate: (var_path))))))))))
                        named_arg: (call_named_arg
                          value: (expr
                            delegate: (ternary_expr
                              delegate: (or_expr
                                delegate: (and_expr
                                  delegate: (compare_expr
                                    delegate: (add_expr
                                      delegate: (mult_expr
                                        delegate: (unary_expr
                                          delegate: (var_path))))))))))
                        named_arg: (call_named_arg
                          value: (expr
                            delegate: (ternary_expr
                              delegate: (or_expr
                                delegate: (and_expr
                                  delegate: (compare_expr
                                    delegate: (add_expr
                                      delegate: (mult_expr
                                        delegate: (unary_expr
                                          delegate: (var_path))))))))))))))))))))))

===
Mixed
===

print(hello, hi, foo=bar, a = b, c = d, )

---

(source_file
  (expr
    delegate: (ternary_expr
      delegate: (or_expr
        delegate: (and_expr
          delegate: (compare_expr
            delegate: (add_expr
              delegate: (mult_expr
                delegate: (unary_expr
                  delegate: (indexed_expr
                    root: (primary_expr
                      (call
                        arg: (expr
                          delegate: (ternary_expr
                            delegate: (or_expr
                              delegate: (and_expr
                                delegate: (compare_expr
                                  delegate: (add_expr
                                    delegate: (mult_expr
                                      delegate: (unary_expr
                                        delegate: (var_path)))))))))
                        arg: (expr
                          delegate: (ternary_expr
                            delegate: (or_expr
                              delegate: (and_expr
                                delegate: (compare_expr
                                  delegate: (add_expr
                                    delegate: (mult_expr
                                      delegate: (unary_expr
                                        delegate: (var_path)))))))))
                        named_arg: (call_named_arg
                          value: (expr
                            delegate: (ternary_expr
                              delegate: (or_expr
                                delegate: (and_expr
                                  delegate: (compare_expr
                                    delegate: (add_expr
                                      delegate: (mult_expr
                                        delegate: (unary_expr
                                          delegate: (var_path))))))))))
                        named_arg: (call_named_arg
                          value: (expr
                            delegate: (ternary_expr
                              delegate: (or_expr
                                delegate: (and_expr
                                  delegate: (compare_expr
                                    delegate: (add_expr
                                      delegate: (mult_expr
                                        delegate: (unary_expr
                                          delegate: (var_path))))))))))
                        named_arg: (call_named_arg
                          value: (expr
                            delegate: (ternary_expr
                              delegate: (or_expr
                                delegate: (and_expr
                                  delegate: (compare_expr
                                    delegate: (add_expr
                                      delegate: (mult_expr
                                        delegate: (unary_expr
                                          delegate: (var_path))))))))))))))))))))))
